--- a/index.html
+++ b/index.html
@@ -48,131 +48,199 @@
         <!-- Links Section -->
         <main class="links">
             <h2 class="section-title">Shogun Ecosystem</h2>
-            <p class="section-desc">Core tools for identity, transfer, and assets.</p>
+            <p class="section-desc">Core tools for identity, transfer, and digital assets.</p>
 
             <a href="https://shogun-eco.xyz/" class="link-card" target="_blank">
                 <img src="images/shogun.png" alt="Shogun" class="card-icon" />
-                <span class="link-text">Shogun - Decentralized Ecosystem</span>
+                <span class="link-text"><strong>Shogun Eco</strong> — Decentralized ecosystem</span>
+                
                 <i class="fas fa-external-link-alt"></i>
             </a>
 
             <a href="https://github.com/scobru/shogun-relay" class="link-card" target="_blank">
                 <img src="images/relay.png" alt="Relay" class="card-icon" />
-                <span class="link-text">Relay - Network Node</span>
+                <span class="link-text"><strong>Relay</strong> — Network node</span>
                 <i class="fas fa-external-link-alt"></i>
             </a>
 
             <a href="https://github.com/scobru/shogun-mule" class="link-card" target="_blank">
                 <img src="images/mule.png" alt="Mule" class="card-icon" />
-                <span class="link-text">Mule - P2P Desktop Downloader</span>
+                <span class="link-text"><strong>Mule</strong> — P2P desktop downloader</span>
                 <i class="fas fa-external-link-alt"></i>
             </a>
 
             <a href="https://auth.shogun-eco.xyz/" class="link-card" target="_blank">
                 <img src="images/auth.png" alt="Auth" class="card-icon" />
-                <span class="link-text">Auth - Decentralized authentication system</span>
+                <span class="link-text"><strong>Auth</strong> — Decentralized authentication</span>
                 <i class="fas fa-external-link-alt"></i>
             </a>
 
             <a href="https://linda.shogun-eco.xyz/" class="link-card" target="_blank">
                 <img src="images/linda.png" alt="Linda" class="card-icon" />
-                <span class="link-text">Linda - P2P Chat Protocol</span>
+                <span class="link-text"><strong>Linda</strong> — P2P chat protocol</span>
                 <i class="fas fa-external-link-alt"></i>
             </a>
 
             <a href="https://wormhole.shogun-eco.xyz/" class="link-card" target="_blank">
                 <img src="images/wormhole.png" alt="Wormhole" class="card-icon" />
-                <span class="link-text">Wormhole - Secure File Transfer</span>
+                <span class="link-text"><strong>Wormhole</strong> — Secure file transfer</span>
                 <i class="fas fa-external-link-alt"></i>
             </a>
 
             <a href="https://drive.shogun-eco.xyz/" class="link-card" target="_blank">
                 <img src="images/drive.png" alt="Drive" class="card-icon" />
-                <span class="link-text">Drive - Encrypted Decentralized Storage</span>
+                <span class="link-text"><strong>Drive</strong> — Encrypted decentralized storage</span>
                 <i class="fas fa-external-link-alt"></i>
             </a>
 
             <a href="https://wallet.shogun-eco.xyz/" class="link-card" target="_blank">
                 <img src="images/wallet.png" alt="Wallet" class="card-icon" />
-                <span class="link-text">Wallet - Hub for your crypto assets</span>
+                <span class="link-text"><strong>Wallet</strong> — Hub for your crypto assets</span>
                 <i class="fas fa-external-link-alt"></i>
             </a>
 
             <a href="https://mistodon.shogun-eco.xyz/" class="link-card" target="_blank">
                 <img src="images/mistodon.png" alt="Mistodon" class="card-icon" />
-                <span class="link-text">Mistodon - Decentralized Social Network</span>
+                <span class="link-text"><strong>Mistodon</strong> — Decentralized social network</span>
                 <i class="fas fa-external-link-alt"></i>
             </a>
 
             <a href="https://notes.shogun-eco.xyz/" class="link-card" target="_blank">
                 <img src="images/notes.png" alt="Notes" class="card-icon" />
-                <span class="link-text">Notes - Encrypted Note Taking</span>
+                <span class="link-text"><strong>Notes</strong> — Encrypted note-taking</span>
                 <i class="fas fa-external-link-alt"></i>
             </a>
 
             <a href="https://linko.shogun-eco.xyz/" class="link-card" target="_blank">
                 <img src="images/linko.png" alt="Linko" class="card-icon" />
-                <span class="link-text">Linko - Decentralized Link Page</span>
+                <span class="link-text"><strong>Linko</strong> — Decentralized link page</span>
                 <i class="fas fa-external-link-alt"></i>
             </a>
 
             <a href="https://gypt.shogun-eco.xyz/" class="link-card" target="_blank">
                 <img src="images/gypt.png" alt="GYPT" class="card-icon" />
-                <span class="link-text">GYPT - Geospatial Messenger</span>
+                <span class="link-text"><strong>GYPT</strong> — Geospatial messenger</span>
                 <i class="fas fa-external-link-alt"></i>
             </a>
 
             <a href="https://binnu.shogun-eco.xyz/" class="link-card" target="_blank">
                 <img src="images/binnu.png" alt="Binnu" class="card-icon" />
-                <span class="link-text">Binnu - P2P Pastebin</span>
+                <span class="link-text"><strong>Binnu</strong> — P2P pastebin</span>
                 <i class="fas fa-external-link-alt"></i>
             </a>
 
             <a href="https://scan.shogun-eco.xyz/" class="link-card" target="_blank">
                 <img src="images/scan.png" alt="Scan" class="card-icon" />
-                <span class="link-text">Scan - Network Monitor</span>
+                <span class="link-text"><strong>Scan</strong> — Network monitor</span>
                 <i class="fas fa-external-link-alt"></i>
             </a>
 
             <a href="https://deals.shogun-eco.xyz/" class="link-card" target="_blank">
                 <img src="images/deals.png" alt="Deals" class="card-icon" />
-                <span class="link-text">Deals - Storage Deals</span>
+                <span class="link-text"><strong>Deals</strong> — Storage deals</span>
                 <i class="fas fa-external-link-alt"></i>
             </a>
 
             <a href="https://dweb.shogun-eco.xyz/" class="link-card" target="_blank">
                 <img src="images/dweb.png" alt="DWeb" class="card-icon" />
-                <span class="link-text">DWeb - Decentralized Web Publishing</span>
+                <span class="link-text"><strong>DWeb</strong> — Decentralized web publishing</span>
                 <i class="fas fa-external-link-alt"></i>
             </a>
 
             <a href="https://pdos.shogun-eco.xyz/" class="link-card" target="_blank">
                 <img src="images/pdos01.png" alt="PDOS" class="card-icon" />
-                <span class="link-text">PDOS - Serverless Tools</span>
+                <span class="link-text"><strong>PDOS</strong> — Serverless tools</span>
+                <i class="fas fa-external-link-alt"></i>
+            </a>
+
+            <a href="https://tunecamp.vercel.app/" class="link-card" target="_blank">
+                <img src="images/tunecamp.png" alt="Tunecamp" class="card-icon" />
+                <span class="link-text"><strong></strong>TUNECAMP</strong> is a Music Streaming Platform</span>
+                <i class="fas fa-external-link-alt"></i>
+            </a>
+
+            <h2 class="section-title">Dev Tools</h2>
+            <p class="section-desc">Libraries, SDK, contracts and infrastructure for developers.</p>
+
+            <a href="https://github.com/scobru/shogun-core" class="link-card" target="_blank">
+                <img src="images/shogun.png" alt="Core" class="card-icon" />
+                <span class="link-text"><strong>Core</strong> — SDK, auth & storage</span>
+                <i class="fas fa-external-link-alt"></i>
+            </a>
+
+            <a href="https://github.com/scobru/shogun-relay" class="link-card" target="_blank">
+                <img src="images/relay.png" alt="Relay" class="card-icon" />
+                <span class="link-text"><strong>Relay</strong> — Network node server</span>
+                <i class="fas fa-external-link-alt"></i>
+            </a>
+
+            <a href="https://github.com/scobru/shogun-contracts" class="link-card" target="_blank">
+                <img src="images/shogun.png" alt="Contracts" class="card-icon" />
+                <span class="link-text"><strong>Contracts</strong> — Smart contracts & registry</span>
+                <i class="fas fa-external-link-alt"></i>
+            </a>
+
+            <a href="https://github.com/scobru/shogun-ipfs" class="link-card" target="_blank">
+                <img src="images/drive.png" alt="IPFS" class="card-icon" />
+                <span class="link-text"><strong>IPFS</strong> — Storage wrapper</span>
+                <i class="fas fa-external-link-alt"></i>
+            </a>
+
+            <a href="https://github.com/scobru/shogun-button-react" class="link-card" target="_blank">
+                <img src="images/auth.png" alt="Button React" class="card-icon" />
+                <span class="link-text"><strong>Button React</strong> — Auth components</span>
+                <i class="fas fa-external-link-alt"></i>
+            </a>
+
+            <a href="https://github.com/scobru/shogun-starter" class="link-card" target="_blank">
+                <img src="images/shogun.png" alt="Starter" class="card-icon" />
+                <span class="link-text"><strong>Starter</strong> — TypeScript/React template</span>
+                <i class="fas fa-external-link-alt"></i>
+            </a>
+
+            <a href="https://shogun-docs-mauve.vercel.app/" class="link-card" target="_blank">
+                <img src="images/shogun.png" alt="Docs" class="card-icon" />
+                <span class="link-text"><strong>Docs</strong> — Ecosystem documentation</span>
+                <i class="fas fa-external-link-alt"></i>
+            </a>
+
+            <a href="https://github.com/scobru/cli-tools" class="link-card" target="_blank">
+                <img src="images/shogun.png" alt="CLI" class="card-icon" />
+                <span class="link-text"><strong>CLI Tools</strong> — Command-line utilities</span>
                 <i class="fas fa-external-link-alt"></i>
             </a>
 
             <h2 class="section-title">Music & Art</h2>
-
-            <a href="https://tunecamp.dev/" class="link-card" target="_blank">
-                <img src="images/tunecamp.png" alt="Tunecamp" class="card-icon" />
-                <span class="link-text">Tunecamp - Music Streaming Platform</span>
-                <i class="fas fa-external-link-alt"></i>
-            </a>
+            <p class="section-desc">Music, Art, and other creative projects.</p>
 
             <a href="https://homologomusic.bandcamp.com" class="link-card" target="_blank">
                 <img src="images/homologo.png" alt="HOMOLOGO" class="card-icon" />
-                <span class="link-text">HOMOLOGO - Songwriter, Pop, Electronic</span>
+                <span class="link-text"><strong>Homologo</strong> — Songwriter, Pop, Electronic</span>
                 <i class="fas fa-external-link-alt"></i>
             </a>
             <a href="https://fademusik.bandcamp.com" class="link-card" target="_blank">
                 <img src="images/fade.png" alt="FADE" class="card-icon" />
-                <span class="link-text">FADE - Electronic</span>
+                <span class="link-text"><strong>Fade</strong> — Electronic</span>
                 <i class="fas fa-external-link-alt"></i>
             </a>
             <a href="https://zimablue.bandcamp.com" class="link-card" target="_blank">
                 <img src="images/zimablue.png" alt="ZIMABLUE" class="card-icon" />
-                <span class="link-text">ZIMABLUE - Ambient, Experimental</span>
+                <span class="link-text"><strong>Zima Blue</strong> — Ambient, Experimental</span>
+                <i class="fas fa-external-link-alt"></i>
+            </a>
+
+            <h2 class="section-title">Self Hosted</h2>
+            <p class="section-desc">Self-hosted projects and services.</p>
+
+            <a href="https://tunecamp.scobrudot.dev/" class="link-card" target="_blank">
+                <img src="images/tunecamp.png" alt="Tunecamp" class="card-icon" />
+                    <span class="link-text"><strong>Sudo Records</strong> — Independent record label based on Tunecamp</span>
+                <i class="fas fa-external-link-alt"></i>
+            </a>
+
+            <a href="https://mytextarea.scobrudot.dev" class="link-card" target="_blank">
+                <img src="images/shogun.png" alt="mytextarea" class="card-icon" />
+                <span class="link-text"><strong>mytextarea</strong> — Minimal text editor that lives in your URL</span>
                 <i class="fas fa-external-link-alt"></i>
             </a>
 
@@ -190,10 +258,10 @@
         </footer>
     </div>
 
-    <!-- Lightbox per ingrandire le icone al clic -->
+    <!-- Lightbox to enlarge icons on click -->
     <div class="lightbox" id="lightbox" aria-hidden="true">
         <div class="lightbox-content">
-            <button type="button" class="lightbox-close" id="lightbox-close" aria-label="Chiudi">&times;</button>
+            <button type="button" class="lightbox-close" id="lightbox-close" aria-label="Close">&times;</button>
             <img id="lightbox-img" src="" alt="" />
         </div>
     </div>
