--- a/index.html
+++ b/index.html
@@ -66,14 +66,9 @@
             <h2 class="section-title">Self Hosted</h2>
             <p class="section-desc">Self-hosted projects and services.</p>
 
-            <a href="https://tunecamp.scobrudot.dev/" class="link-card" target="_blank">
+            <a href="https://sudorecords.scobrudot.dev/" class="link-card" target="_blank">
                 <span class="link-text"><strong>Sudo Records</strong> — Independent record label based on
                     Tunecamp</span>
-                <i class="fas fa-external-link-alt"></i>
-            </a>
-
-            <a href="https://mytextarea.scobrudot.dev" class="link-card" target="_blank">
-                <span class="link-text"><strong>mytextarea</strong> — Minimal text editor that lives in your URL</span>
                 <i class="fas fa-external-link-alt"></i>
             </a>
 
@@ -87,11 +82,6 @@
 
             <a href="https://github.com/scobru/shogun-relay" class="link-card" target="_blank">
                 <span class="link-text"><strong>Relay</strong> — Network node</span>
-                <i class="fas fa-external-link-alt"></i>
-            </a>
-
-            <a href="https://github.com/scobru/shogun-mule" class="link-card" target="_blank">
-                <span class="link-text"><strong>Mule</strong> — P2P desktop downloader</span>
                 <i class="fas fa-external-link-alt"></i>
             </a>
 
@@ -110,58 +100,18 @@
                 <i class="fas fa-external-link-alt"></i>
             </a>
 
-            <a href="https://drive.shogun-eco.xyz/" class="link-card" target="_blank">
-                <span class="link-text"><strong>Drive</strong> — Encrypted decentralized storage</span>
-                <i class="fas fa-external-link-alt"></i>
-            </a>
-
-            <a href="https://wallet.shogun-eco.xyz/" class="link-card" target="_blank">
-                <span class="link-text"><strong>Wallet</strong> — Hub for your crypto assets</span>
-                <i class="fas fa-external-link-alt"></i>
-            </a>
-
-            <a href="https://mistodon.shogun-eco.xyz/" class="link-card" target="_blank">
-                <span class="link-text"><strong>Mistodon</strong> — Decentralized social network</span>
-                <i class="fas fa-external-link-alt"></i>
-            </a>
-
-            <a href="https://notes.shogun-eco.xyz/" class="link-card" target="_blank">
-                <span class="link-text"><strong>Notes</strong> — Encrypted note-taking</span>
-                <i class="fas fa-external-link-alt"></i>
-            </a>
-
             <a href="https://linko.shogun-eco.xyz/" class="link-card" target="_blank">
                 <span class="link-text"><strong>Linko</strong> — Decentralized link page</span>
                 <i class="fas fa-external-link-alt"></i>
             </a>
 
-            <a href="https://gypt.shogun-eco.xyz/" class="link-card" target="_blank">
-                <span class="link-text"><strong>GYPT</strong> — Geospatial messenger</span>
-                <i class="fas fa-external-link-alt"></i>
-            </a>
-
-            <a href="https://binnu.shogun-eco.xyz/" class="link-card" target="_blank">
-                <span class="link-text"><strong>Binnu</strong> — P2P pastebin</span>
+            <a href="https://shogun-space.vercel.app/" class="link-card" target="_blank">
+                <span class="link-text"><strong>Shogun Space</strong> — Decentralized hub</span>
                 <i class="fas fa-external-link-alt"></i>
             </a>
 
             <a href="https://scan.shogun-eco.xyz/" class="link-card" target="_blank">
                 <span class="link-text"><strong>Scan</strong> — Network monitor</span>
-                <i class="fas fa-external-link-alt"></i>
-            </a>
-
-            <a href="https://deals.shogun-eco.xyz/" class="link-card" target="_blank">
-                <span class="link-text"><strong>Deals</strong> — Storage deals</span>
-                <i class="fas fa-external-link-alt"></i>
-            </a>
-
-            <a href="https://dweb.shogun-eco.xyz/" class="link-card" target="_blank">
-                <span class="link-text"><strong>DWeb</strong> — Decentralized web publishing</span>
-                <i class="fas fa-external-link-alt"></i>
-            </a>
-
-            <a href="https://pdos.shogun-eco.xyz/" class="link-card" target="_blank">
-                <span class="link-text"><strong>PDOS</strong> — Serverless tools</span>
                 <i class="fas fa-external-link-alt"></i>
             </a>
 
@@ -203,8 +153,8 @@
                 <i class="fas fa-external-link-alt"></i>
             </a>
 
-            <a href="https://shogun-docs-mauve.vercel.app/" class="link-card" target="_blank">
-                <span class="link-text"><strong>Docs</strong> — Ecosystem documentation</span>
+            <a href="https://github.com/scobru/shogun-iframechat" class="link-card" target="_blank">
+                <span class="link-text"><strong>Iframechat</strong> — P2P chat</span>
                 <i class="fas fa-external-link-alt"></i>
             </a>
 
